_build/_log
### Starting build.
# Target: ftest.ml.depends, tags: { extension:ml, file:ftest.ml, ocaml, ocamldep, quiet }
ocamldep.opt -modules ftest.ml > ftest.ml.depends # cached
# Target: gfile.mli.depends, tags: { extension:mli, file:gfile.mli, ocaml, ocamldep, quiet }
ocamldep.opt -modules gfile.mli > gfile.mli.depends # cached
# Target: graph.mli.depends, tags: { extension:mli, file:graph.mli, ocaml, ocamldep, quiet }
ocamldep.opt -modules graph.mli > graph.mli.depends # cached
# Target: graph.cmi, tags: { byte, compile, extension:mli, file:graph.mli, interf, ocaml, quiet }
ocamlc.opt -c -o graph.cmi graph.mli # cached
# Target: gfile.cmi, tags: { byte, compile, extension:mli, file:gfile.mli, interf, ocaml, quiet }
ocamlc.opt -c -o gfile.cmi gfile.mli # cached
# Target: tools.mli.depends, tags: { extension:mli, file:tools.mli, ocaml, ocamldep, quiet }
ocamldep.opt -modules tools.mli > tools.mli.depends
# Target: tools.cmi, tags: { byte, compile, extension:mli, file:tools.mli, interf, ocaml, quiet }
ocamlc.opt -c -o tools.cmi tools.mli
+ ocamlc.opt -c -o tools.cmi tools.mli
File "tools.mli", line 7, characters 18-29:
7 | val empty: labels empty_graph
                      ^^^^^^^^^^^
Error: Unbound type constructor empty_graph
Command exited with code 2.
# Compilation unsuccessful.
